Fix mushroom database index view img alignment

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -47,7 +47,7 @@
 }
 
 .shroom-image {
-  width: 200px;
+  width: 100%;
 }
 
 .swell {
